--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 18:05:03 2018</p>
+         Last Run: Tue Jul 17 19:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -29,20 +29,8 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>07:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>30</td>
-                        <td>30</td>
-                        <td>0</td>
-                        <td>27</td>
-                        <td>1</td>
-                        <td>14</td>
-                        <td>ESE</td>
-                        <td>65</td>
-                     </tr>
-                     <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>29</td>
                         <td>29</td>
                         <td>0</td>
@@ -50,19 +38,19 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>63</td>
+                        <td>58</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>26</td>
                         <td>26</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>38</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>59</td>
+                        <td>ESE</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,7 +83,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM",
              "09:00 PM"
            ],
@@ -106,7 +93,6 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "30",
                  "29",
                  "26"
                ]
@@ -117,7 +103,6 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "30",
                  "29",
                  "26"
                ]
@@ -160,7 +145,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "07:00 PM",
              "08:00 PM",
              "09:00 PM"
            ],
@@ -171,8 +155,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -180,7 +163,6 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "27",
                  "31",
                  "38"
                ]
@@ -190,9 +172,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "63",
-                 "59"
+                 "58",
+                 "57"
                ]
              }
            ]
@@ -210,7 +191,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 18:05:03 2018</p>
+         Last Run: Tue Jul 17 19:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -234,7 +215,7 @@
                         <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>68</td>
+                        <td>61</td>
                         <td>53</td>
                         <td>3</td>
                         <td>13</td>
@@ -247,11 +228,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>55</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>69</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -263,17 +244,17 @@
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>80</td>
+                        <td>78</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>55</td>
                         <td>62</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>E</td>
                         <td>87</td>
                      </tr>
@@ -323,7 +304,7 @@
                  "22",
                  "21",
                  "19",
-                 "19"
+                 "20"
                ]
              },
              {
@@ -335,7 +316,7 @@
                  "22",
                  "21",
                  "19",
-                 "19"
+                 "20"
                ]
              }
            ]
@@ -387,7 +368,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "68",
+                 "61",
                  "55",
                  "55",
                  "55"
@@ -399,7 +380,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "53",
-                 "57",
+                 "56",
                  "63",
                  "62"
                ]
@@ -410,8 +391,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "75",
-                 "69",
-                 "80",
+                 "73",
+                 "78",
                  "87"
                ]
              }
@@ -429,7 +410,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 18:05:03 2018</p>
+         Last Run: Tue Jul 17 19:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -453,19 +434,19 @@
                         <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>2</td>
+                        <td>0</td>
                         <td>48</td>
                         <td>3</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>3</td>
+                        <td>0</td>
                         <td>41</td>
                         <td>4</td>
                         <td>11</td>
@@ -477,19 +458,19 @@
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>18</td>
-                        <td>37</td>
+                        <td>16</td>
+                        <td>36</td>
                         <td>6</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>18</td>
+                        <td>15</td>
                         <td>36</td>
                         <td>7</td>
                         <td>13</td>
@@ -501,7 +482,7 @@
                         <td>Partly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>18</td>
+                        <td>15</td>
                         <td>37</td>
                         <td>6</td>
                         <td>13</td>
@@ -622,11 +603,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "3",
-                 "18",
-                 "18",
-                 "18"
+                 "0",
+                 "0",
+                 "16",
+                 "15",
+                 "15"
                ]
              },
              {
@@ -636,7 +617,7 @@
                "data":[
                  "48",
                  "41",
-                 "37",
+                 "36",
                  "36",
                  "37"
                ]
@@ -646,9 +627,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "13",
+                 "12",
                  "15",
-                 "19",
+                 "18",
                  "46",
                  "50"
                ]
