--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 22:05:26 2018</p>
+         Last Run: Tue Jul 17 23:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -30,23 +30,23 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Thunderstorm</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>63</td>
-                        <td>54</td>
-                        <td>2</td>
-                        <td>13</td>
+                        <td>57</td>
+                        <td>53</td>
+                        <td>3</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>76</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>55</td>
-                        <td>57</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -58,11 +58,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>55</td>
-                        <td>64</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>ESE</td>
-                        <td>82</td>
+                        <td>E</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -70,11 +70,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>55</td>
-                        <td>62</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>87</td>
+                        <td>ESE</td>
+                        <td>83</td>
                      </tr>
                   </tbody>
                </table>
@@ -120,7 +120,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "22",
-                 "21",
+                 "22",
                  "19",
                  "20"
                ]
@@ -132,7 +132,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "22",
-                 "21",
+                 "22",
                  "19",
                  "20"
                ]
@@ -186,7 +186,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "63",
+                 "57",
                  "55",
                  "55",
                  "55"
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "53",
                  "54",
-                 "57",
-                 "64",
-                 "62"
+                 "60",
+                 "59"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "75",
                  "76",
-                 "76",
-                 "82",
-                 "87"
+                 "81",
+                 "83"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 22:05:26 2018</p>
+         Last Run: Tue Jul 17 23:05:12 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
