--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 23:05:12 2018</p>
+         Last Run: Wed Jul 18 00:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>57</td>
-                        <td>53</td>
-                        <td>3</td>
+                        <td>63</td>
+                        <td>54</td>
+                        <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>75</td>
+                        <td>76</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>55</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>1</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>76</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>55</td>
-                        <td>60</td>
+                        <td>61</td>
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
@@ -73,8 +73,8 @@
                         <td>59</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>ESE</td>
-                        <td>83</td>
+                        <td>E</td>
+                        <td>82</td>
                      </tr>
                   </tbody>
                </table>
@@ -186,7 +186,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "57",
+                 "63",
                  "55",
                  "55",
                  "55"
@@ -197,9 +197,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
                  "54",
-                 "60",
+                 "55",
+                 "61",
                  "59"
                ]
              },
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "75",
                  "76",
+                 "77",
                  "81",
-                 "83"
+                 "82"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jul 17 23:05:12 2018</p>
+         Last Run: Wed Jul 18 00:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,10 +253,10 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>46</td>
                         <td>3</td>
                         <td>11</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>12</td>
                      </tr>
                      <tr>
@@ -265,7 +265,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>39</td>
                         <td>4</td>
                         <td>11</td>
                         <td>WNW</td>
@@ -276,36 +276,36 @@
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>16</td>
+                        <td>15</td>
                         <td>36</td>
                         <td>6</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
                         <td>36</td>
-                        <td>7</td>
+                        <td>5</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>46</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>37</td>
-                        <td>6</td>
-                        <td>13</td>
+                        <td>38</td>
+                        <td>5</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>50</td>
+                        <td>71</td>
                      </tr>
                   </tbody>
                </table>
@@ -423,7 +423,7 @@
                "data":[
                  "0",
                  "0",
-                 "16",
+                 "15",
                  "15",
                  "15"
                ]
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "48",
-                 "41",
+                 "46",
+                 "39",
                  "36",
                  "36",
-                 "37"
+                 "38"
                ]
              },
              {
@@ -447,9 +447,9 @@
                "data":[
                  "12",
                  "15",
-                 "18",
-                 "46",
-                 "50"
+                 "19",
+                 "63",
+                 "71"
                ]
              }
            ]
