--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 00:05:21 2018</p>
+         Last Run: Wed Jul 18 01:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,12 +33,12 @@
                         <td>Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>63</td>
-                        <td>54</td>
-                        <td>2</td>
-                        <td>11</td>
+                        <td>65</td>
+                        <td>53</td>
+                        <td>3</td>
+                        <td>13</td>
                         <td>ESE</td>
-                        <td>76</td>
+                        <td>75</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -47,21 +47,21 @@
                         <td>22</td>
                         <td>55</td>
                         <td>55</td>
-                        <td>1</td>
+                        <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>77</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>55</td>
-                        <td>61</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>50</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>13</td>
-                        <td>E</td>
+                        <td>ESE</td>
                         <td>81</td>
                      </tr>
                      <tr>
@@ -69,12 +69,12 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>55</td>
-                        <td>59</td>
+                        <td>50</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>82</td>
+                        <td>ESE</td>
+                        <td>81</td>
                      </tr>
                   </tbody>
                </table>
@@ -121,7 +121,7 @@
                "data":[
                  "22",
                  "22",
-                 "19",
+                 "20",
                  "20"
                ]
              },
@@ -133,7 +133,7 @@
                "data":[
                  "22",
                  "22",
-                 "19",
+                 "20",
                  "20"
                ]
              }
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "63",
+                 "65",
                  "55",
-                 "55",
-                 "55"
+                 "50",
+                 "50"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "53",
                  "55",
-                 "61",
-                 "59"
+                 "60",
+                 "58"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "76",
-                 "77",
+                 "75",
+                 "66",
                  "81",
-                 "82"
+                 "81"
                ]
              }
            ]
@@ -228,7 +228,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 18 00:05:21 2018</p>
+         Last Run: Wed Jul 18 01:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -253,11 +253,11 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>47</td>
                         <td>3</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -277,11 +277,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>36</td>
+                        <td>34</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>WNW</td>
-                        <td>19</td>
+                        <td>20</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -289,11 +289,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>36</td>
+                        <td>34</td>
                         <td>5</td>
-                        <td>13</td>
+                        <td>14</td>
                         <td>WNW</td>
-                        <td>63</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -301,11 +301,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>15</td>
-                        <td>38</td>
+                        <td>36</td>
                         <td>5</td>
                         <td>14</td>
                         <td>WNW</td>
-                        <td>71</td>
+                        <td>72</td>
                      </tr>
                   </tbody>
                </table>
@@ -433,11 +433,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "46",
+                 "47",
                  "39",
-                 "36",
-                 "36",
-                 "38"
+                 "34",
+                 "34",
+                 "36"
                ]
              },
              {
@@ -445,11 +445,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
+                 "13",
                  "15",
-                 "19",
-                 "63",
-                 "71"
+                 "20",
+                 "64",
+                 "72"
                ]
              }
            ]
